--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ title = "Proochista Ariana"
 theme = "hugo-devresume-theme"
 googleAnalytics = "UA-XXXXXXX-Y"
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+publishDir = "docs"
 
 
 
