--- a/config.toml
+++ b/config.toml
@@ -63,30 +63,30 @@ publishDir = "docs"
         [[params.skills.list]]
         title = "Technical"
         [[params.skills.list.items]]
-        details = "JavaScript/Angular/React/Vue"
+        details = ""
         [[params.skills.list.items]]
-        details = "Python/Ruby/PHP"
+        details = ""
         [[params.skills.list.items]]
-        details = "Node.js/ASP.NET"
+        details = ""
         [[params.skills.list.items]]
-        details = "PostgreSQL/MySQL"
+        details = ""
         [[params.skills.list.items]]
-        details = "Object-oriented design"
+        details = ""
         [[params.skills.list.items]]
-        details = "Design and implement database structures"
+        details = ""
         [[params.skills.list.items]]
-        details = "Lead and deliver complex software systems"
+        details = ""
 
         [[params.skills.list]]
         title = "Professional"
         [[params.skills.list.items]]
-        details = "Effective communication"
+        details = ""
         [[params.skills.list.items]]
-        details = "Team player"
+        details = ""
         [[params.skills.list.items]]
-        details = "Strong problem solver"
+        details = ""
         [[params.skills.list.items]]
-        details = "Good time management"
+        details = ""
 
 
 
@@ -110,6 +110,14 @@ publishDir = "docs"
         degree = "MS in International Health"
         university = "Harvard University"
         dates = "1998"
+        [[params.education.list]]
+        degree = "Master in Public Health"
+        university = "Oregon Health Science University"
+        dates = "1997"
+        [[params.education.list]]
+        degree = "Bachelor of Arts (with a major in Immunology)"
+        university = "Reed College"
+        dates = "1993"        
 
 
 
@@ -122,15 +130,45 @@ publishDir = "docs"
         enable = true
 
         [[params.awards.list]]
-        name = "Award Lorem Ipsum"
-        body = "Microsoft lorem ipsum"
+        name = "Major Educator Award"
+        body = "Medical Sciences Division, University of Oxford"
         date = "2019"
         [[params.awards.list]]
-        name = "Award Donec Sodales"
-        body = "Oracle Aenean"
+        name = "Outstanding Graduate Supervisor Award - Medical Sciences Division"
+        body = "Oxford University Student Union"
         date = "2017"
-
-
+        [[params.awards.list]]
+        name = "Special Recognition Award"
+        body = "Oxford University Student Union"
+        date = "2017"
+        [[params.awards.list]]
+        name = "Most Acclaimed Lecturer - Medical Sciences Division"
+        body = "Oxford University Student Union"
+        date = "2016"
+        [[params.awards.list]]
+        name = "Excellent Teacher Award"
+        body = "Medical Sciences Division, University of Oxford"
+        date = "2013"
+        [[params.awards.list]]
+        name = "Most Acclaimed Lecturer - Medical Sciences Division"
+        body = "Oxford University Student Union"
+        date = "2013"
+        [[params.awards.list]]
+        name = "George Webb Medley Research Award"
+        body = "Department of Economics, University of Oxford"
+        date = "2004"
+        [[params.awards.list]]
+        name = "Norman Chester Research Award"
+        body = "Department of Politics, University of Oxford"
+        date = "2004"
+        [[params.awards.list]]
+        name = "George Peters Travel Award"
+        body = "Queen Elizabeth House, University of Oxford"
+        date = "2004"
+        [[params.awards.list]]
+        name = "Travel Award"
+        body = "Oxford University Mexican Centre"
+        date = "2004"
 
 
 
@@ -155,7 +193,7 @@ publishDir = "docs"
 
 
     [params.interests]
-        enable = true
+        enable = false
 
         [[params.interests.list]]
         name = "Climbing"
@@ -175,7 +213,7 @@ publishDir = "docs"
 
     [params.summary]
         enable = true
-        text = "Summarise your career here. Donec quam felis, ultricies nec, pellentesque eu. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.  Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh."
+        text = "I am Course Director for the MSc in International Health and Tropical Medicine, Centre for Tropical Medicine and Global Health, Nuffield Department of Medicine. My research empirically examines the relationship between processes of development and health in resource limited and transition contexts, appreciating the multidimensionality of both."
 
 
 
@@ -188,56 +226,58 @@ publishDir = "docs"
         enable = true
 
         [[params.experience.list]]
-        title = "Senior Software Engineer"
-        dates = "2019 - Present"
-        company = "Google"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Donec pede justo, fringilla vel. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis."
-        [[params.experience.list.items]]
-        details = "Lorem ipsum dolor sit amet, consectetuer."
-        [[params.experience.list.items]]
-        details = "Aenean commodo ligula eget dolor."
-        [[params.experience.list.items]]
-        details = "Etiam ultricies nisi vel augue."
+        title = "Director, MSc in International Health and Tropical Medicine"
+        dates = "2015 - Present"
+        company = "Nuffield Department of Medicine, University of Oxford"
+        details = ""
 
         [[params.experience.list]]
-        title = "Lead Software Developer"
-        dates = "2016 - 2019"
-        company = "Apple"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Donec pede justo, fringilla vel."
-        [[params.experience.list.items]]
-        details = "Lorem ipsum dolor sit amet, consectetuer."
-        [[params.experience.list.items]]
-        details = "Aenean commodo ligula eget dolor."
+        title = "Deputy Director, Grand Union Doctoral Training Partnership"
+        dates = "2017 - 2019"
+        company = "Social Sciences Division, University of Oxford"
+        details = ""
 
         [[params.experience.list]]
-        title = "Senior Software Developer"
-        dates = "2014 - 2016"
-        company = "Dropbox"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."
+        title = "Educational Development Consultant"
+        dates = "2014-2015"
+        company = "Oxford Learning Institute, University of Oxford"
+        details = ""
 
         [[params.experience.list]]
-        title = "Senior Developer"
-        dates = "2013 - 2014"
-        company = "Uber"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus."
+        title = "Departmental Lecturer in Global Health and Development"
+        dates = "2008 - 2015"
+        company = "Department of International Development, University of Oxford"
+        details = ""
 
         [[params.experience.list]]
-        title = "Backend Developer"
-        dates = "2014 - 2016"
-        company = "Amazon"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."
+        title = "Director, MSc in Global Health Science"
+        dates = "2010 - 2014"
+        company = "Department of Public Health, University of Oxford"
+        details = ""
 
         [[params.experience.list]]
-        title = "Frontend Developer"
-        dates = "2013 - 2014"
-        company = "Startup"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus."
+        title = "Teaching and Research Associate"
+        dates = "2007 - 2008"
+        company = "Department of Public Health, University of Oxford"
+        details = ""
 
+        [[params.experience.list]]
+        title = "Teaching and Research Assistant"
+        dates = "2006 - 2007"
+        company = "Department of Public Health, University of Oxford"
+        details = ""
 
+        [[params.experience.list]]
+        title = "UNDP Human Development Training Course coordinator"
+        dates = "2004; 2006; 2008"
+        company = "United Nations Development Programme"
+        details = ""
 
-
-
-
+        [[params.experience.list]]
+        title = "Researcher"
+        dates = "2006 - 2007"
+        company = "Oxford Poverty and Human Development Initiative"
+        details = ""
 
 
 
